--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <script>
         if ('serviceWorker' in navigator) {
             window.addEventListener('load', () => {
-                navigator.serviceWorker.register('./service-worker.js')
+                navigator.serviceWorker.register('/PWA_WAN/service-worker.js')
                     .then(() => console.log("Service Worker Registered"))
                     .catch(error => console.log("Service Worker Registration Failed:", error));
             });
