Add ability to add goals

--- a/index.html
+++ b/index.html
@@ -26,6 +26,18 @@
         <h2 id="countdown" class="countdown-number">10,000</h2>
     </div>
 
+    <div class="goal-section">
+        <h2>Set a Goal</h2>
+        <input type="text" id="goal-name" placeholder="Enter your goal...">
+        <input type="date" id="goal-date">
+        <button onclick="addGoal()">Add Goal</button>
+    </div>
+
+    <div class="goal-list">
+        <h2>Your Goals</h2>
+        <ul id="goal-list"></ul>
+    </div>
+
     <script src="script.js"></script>
 </body>
 </html>
