Broke js files up. Added delete button for goals.

--- a/goals.html
+++ b/goals.html
@@ -26,7 +26,7 @@
         <h2>Set a Goal</h2>
         <input type="text" id="goal-name" placeholder="Enter your goal...">
         <input type="date" id="goal-date">
-        <button onclick="addGoal()">Add Goal</button>
+        <button id="add-goal-btn">Add Goal</button>
     </div>
 
     <div class="goal-list">
@@ -39,6 +39,8 @@
         <a href="index.html" class="nav-button">Back to Countdown</a>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/goals.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
