--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
         <a href="goals.html" class="nav-button">Set Goals</a>
     </div>
 
-    <script src="script.js"></script>
+    <script src="js/storage.js"></script>
+    <script src="js/countdown.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
